--- a/.github/workflows/richnav.yml
+++ b/.github/workflows/richnav.yml
@@ -5,7 +5,7 @@ on: workflow_dispatch
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v2
