--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -20,3 +20,7 @@ jobs:
     
     - name: Test with dotnet
       run: dotnet test ./eShopOnWeb.sln --configuration Release
+
+    - name: Copy Files
+      run: |
+        copy C:\Users\vamshi\actions-runner\coresonant\eShopOnWeb\eShopOnWeb\* C:\inetpub\wwwroot\production
